--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root{
   --dark-color:#102030;
@@ -12,9 +13,30 @@
   background:#f7cb54;
 }
 
-body{font-family:var(--default-font); font-size:14px; color:var(--dark-color); background-color:var(--light-gray);}
+@layer components {
+  .input {
+    @apply w-full px-4 py-3 rounded-lg border 
+    border-gray-300 dark:border-gray-600
+    bg-white dark:bg-gray-700
+    text-gray-800 dark:text-white
+    focus:outline-none focus:ring-2 focus:ring-blue-500;
+  }
+
+  .label {
+    @apply block mb-1 text-sm font-medium 
+    text-gray-700 dark:text-gray-300;
+  }
+}
+
+body{font-family:var(--default-font); font-size:14px;}
 
 h1,h2,h3,h4{font-family: var(--title-font);}
 a,button, input[type="submit"] {font-family:var(--action-font);}
 
 .apexcharts-toolbar{display: none !important;}
+
+.dark .graphChart{color:var(--dark-color);}
+.dark .graphChart svg tspan,
+.dark .graphChart svg text{fill:#b6b5b5;}
+.dark .graphChart svg .apexcharts-series path{fill:rgb(192, 134, 26);}
+.dark .MuiChartsLabel-root.MuiChartsLegend-label{color:#b6b5b5;}
